--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                         <div>
                                             <img src="image/product4.jpg">
                                             <div class="box d-flex">
-                                                <a href="#" class="pn">clamps and reducers</a>
+                                                <a href="#" class="pn">clamps & reducers</a>
                                                 <p class="cost">$200.00</p>
                                             </div>
                                         </div>
